Fixed #32 innerHTML causes EXC_BAD_ACCESS

--- a/Tests/test_HTML4.html
+++ b/Tests/test_HTML4.html
@@ -64,5 +64,10 @@
         <tr><td>Swift-HTML-Parser</td><td>100</td></tr>
       </tbody>
     </table>
+    
+    <div id="inner">
+        abc<div>def</div>hij<span>klmn</span>opq
+    </div>
+    <div id="asd">asd</div>
   </body>
 </html>
