--- a/tutorials/v1/installing.html
+++ b/tutorials/v1/installing.html
@@ -6,10 +6,11 @@
   <title>Kanna</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/cayman.css">
+  <link rel="stylesheet" href="css/cayman.css">
 </head>
+
 
   <body>
     <section class="page-header">
