--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Kanna</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="http://blog.guardlet.com/Kanna/css/normalize.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/cayman.css">
+  <link rel="stylesheet" href="http://blog.guardlet.com/Kanna/css/cayman.css">
 </head>
 
 
@@ -24,10 +24,10 @@
       
       <h3 id="tutorials">Tutorials</h3>
 <ol>
-  <li><a href="/tutorials/v1/installing.html#installing-kanna">Installing Kanna</a></li>
-  <li><a href="/tutorials/v1/parsing.html#parsing-an-htmlxml-document">Parsing an HTML/XML document</a></li>
-  <li><a href="/tutorials/v1/searching.html#searching-an-htmlxml-document">Searching a XML/HTML document</a></li>
-  <li><a href="/tutorials/v1/modifying.html#modifying-an-htmlxml-document">Modifying an HTML/XML document</a></li>
+  <li><a href="http://blog.guardlet.com/Kanna/tutorials/v1/installing.html#installing-kanna">Installing Kanna</a></li>
+  <li><a href="http://blog.guardlet.com/Kanna/tutorials/v1/parsing.html#parsing-an-htmlxml-document">Parsing an HTML/XML document</a></li>
+  <li><a href="http://blog.guardlet.com/Kanna/tutorials/v1/searching.html#searching-an-htmlxml-document">Searching a XML/HTML document</a></li>
+  <li><a href="http://blog.guardlet.com/Kanna/tutorials/v1/modifying.html#modifying-an-htmlxml-document">Modifying an HTML/XML document</a></li>
 </ol>
 
 <h3 id="support">Support</h3>
