Added target link to SPM

--- a/tutorials/v2/installing.html
+++ b/tutorials/v2/installing.html
@@ -28,7 +28,7 @@
 <ol>
   <li><a href="#cocoapods">CocoaPods</a></li>
   <li><a href="#carthage">Carthage</a></li>
-  <li><a href="#manual-installation">Manually</a></li>
+  <li><a href="#swift-package-manager-beta">Swift Package Manager</a></li>
 </ol>
 
 <h2 id="cocoapods">CocoaPods</h2>
